# octocat-rs

./: .deepsource.toml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  crates.js  help.html  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js  wrangler.toml
.cargo/: config.toml
.github/workflows/: build.yml  gh-pages.yml  tests.yml
examples/: octocat.example.toml
examples/basic/: Cargo.toml
examples/basic-secret/: Cargo.toml
examples/basic-secret/src/: main.rs
examples/basic-sso/: Cargo.toml
examples/basic-sso/src/: main.rs
examples/basic/src/: main.rs
examples/builders/: Cargo.toml
examples/builders/src/: main.rs
examples/cloudflare/: Cargo.toml  deps  wrangler.toml
examples/cloudflare/src/: lib.rs
examples/commitsummary/: Cargo.toml  README.md
examples/commitsummary/src/: main.rs
github-rest/: .gitignore  Cargo.toml  README.md  TODO
github-rest/src/: client.rs  lib.rs
github-rest/src/builders/: commits.rs  gists.rs  issues.rs  mod.rs  pull_requests.rs  reactions.rs  search.rs
github-rest/src/methods/: commits.rs  gists.rs  issues.rs  misc.rs  mod.rs  search.rs  users.rs  util.rs
github-rest/src/model/: commits.rs  event_types.rs  events.rs  issues.rs  keys.rs  mod.rs  organizations.rs  pull_request.rs  push.rs  reactions.rs  release.rs  repository.rs  search.rs  star.rs  user.rs  workflows.rs
github-rest/src/model/apps/: events.rs
github-rest/src/model/commits/: association.rs  comments.rs  commits.rs  events.rs  mod.rs
github-rest/src/model/discussions/: discussions.rs  events.rs  mod.rs
github-rest/src/model/gists/: mod.rs
github-rest/src/model/issues/: comments.rs  events.rs  issues.rs  milestones.rs  mod.rs  urls.rs
github-rest/src/model/misc/: events.rs  mod.rs
github-rest/src/model/organizations/: events.rs  mod.rs  organizations.rs
github-rest/src/model/pull_requests/: events.rs  mod.rs  pull_requests.rs
github-rest/src/model/releases/: events.rs  mod.rs  releases.rs
github-rest/src/model/repositories/: events.rs  mod.rs  repositories.rs  security_advisory.rs  wiki.rs
github-rest/src/model/repositories/workflows/: events.rs  mod.rs  workflows.rs
github_rest/: all.html  enum.GithubRestError.html  index.html  sidebar-items.js  trait.Requester.html
github_rest/builders/: index.html  sidebar-items.js  struct.CommentReactionBuilder.html  struct.CommitCommentBuilder.html  struct.CreateGistBuilder.html  struct.CreateIssueBuilder.html  struct.GetGistsBuilder.html  struct.GetIssuesBuilder.html  struct.GetPullsBuilder.html  struct.PatchGistBuilder.html  trait.Builder.html
github_rest/builders/commits/: struct.CommitCommentBuilder.html
github_rest/builders/gists/: struct.CreateGistBuilder.html  struct.GetGistsBuilder.html  struct.PatchGistBuilder.html
github_rest/builders/issues/: struct.CreateIssueBuilder.html  struct.GetIssuesBuilder.html
github_rest/builders/pull_requests/: struct.GetPullsBuilder.html
github_rest/builders/reactions/: struct.CommentReactionBuilder.html
github_rest/end_points/: enum.EndPoints.html  enum.Methods.html  index.html  sidebar-items.js
github_rest/methods/: enum.IssueState.html  enum.Role.html  fn.add_to_org.html  fn.api_info.html  fn.comment_on_commit.html  fn.create_gist.html  fn.create_issue.html  fn.delete_gist.html  fn.get_commit.html  fn.get_commits.html  fn.get_followers.html  fn.get_following.html  fn.get_issues.html  fn.get_pulls.html  fn.get_user_followers.html  fn.get_user_following.html  fn.get_user_gists.html  fn.get_user_gpg_keys.html  fn.get_user_keys.html  fn.get_user_organizations.html  fn.patch_gist.html  fn.react_to_commit_comment.html  fn.zen.html  index.html  sidebar-items.js  struct.AddToOrgBody.html  struct.CommitCommentBody.html  struct.CreateGistBody.html  struct.CreateIssueBody.html  struct.FileContents.html  struct.GetCommitBody.html  struct.GetCommitsBody.html  struct.GetIssuesBody.html  struct.GetPullsBody.html  struct.Key.html  struct.Pagination.html  struct.PatchGistBody.html
github_rest/methods/commits/: fn.comment_on_commit.html  fn.get_commit.html  fn.get_commits.html  fn.react_to_commit_comment.html  struct.CommitCommentBody.html  struct.GetCommitBody.html  struct.GetCommitsBody.html
github_rest/methods/gists/: fn.create_gist.html  fn.delete_gist.html  fn.get_user_gists.html  fn.patch_gist.html  struct.CreateGistBody.html  struct.FileContents.html  struct.PatchGistBody.html
github_rest/methods/issues/: enum.IssueState.html  fn.create_issue.html  fn.get_issues.html  fn.get_pulls.html  struct.CreateIssueBody.html  struct.GetIssuesBody.html  struct.GetPullsBody.html
github_rest/methods/misc/: enum.Role.html  fn.add_to_org.html  fn.api_info.html  fn.zen.html  struct.AddToOrgBody.html
github_rest/methods/prelude/: derive.Deserialize.html  derive.Serialize.html  enum.EndPoints.html  enum.Methods.html  index.html  sidebar-items.js  struct.Body.html  trait.Deserialize.html  trait.Serialize.html
github_rest/methods/users/: fn.get_followers.html  fn.get_following.html  fn.get_user_followers.html  fn.get_user_following.html  fn.get_user_gpg_keys.html  fn.get_user_keys.html  fn.get_user_organizations.html  struct.Key.html  struct.Pagination.html
github_rest/model/: index.html  sidebar-items.js
github_rest/model/apps/: index.html  sidebar-items.js
github_rest/model/commits/: index.html  sidebar-items.js  struct.Commit.html  type.Commits.html
github_rest/model/discussions/: enum.LockReason.html  index.html  sidebar-items.js  (+2 more)
implementors/github_rest/: trait.Requester.js
implementors/strum/: trait.VariantNames.js
octocat-rs/: Cargo.toml  TODO  deps
octocat-rs/src/: lib.rs
octocat-rs/src/github/: client.rs  client_builder.rs  command.rs  handler.rs  http.rs  mod.rs  util.rs
octocat_rs/: all.html  index.html  sidebar-items.js
octocat_rs/github/: index.html  sidebar-items.js
src/: github.rs  lib.rs  utils.rs
src/github/: client.rs  client_builder.rs  command.rs  handler.rs  http.rs  mod.rs  model.rs  traits.rs  util.rs
src/github_rest/: lib.rs.html
src/octocat_rs/: lib.rs.html
(+501 files in other folders)
