[package]
name = "github-rest"
version = "0.0.0"
edition = "2021"
authors = [
    "Proudmuslim <proudmuslim-dev@protonmail.com>",
    "Tricked <tricked@duck.com>",
]
license = "BSD-4-Clause"

# TODO: Organize feature-specific deps
[dependencies]
## HTTP
github-api-octocat = "0.1.0"

## Serialization/Deserialization
strum = { version = "0.24.1", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
base64 = { version = "0.21.0", optional = true }

# Misc
async-trait = "0.1.64"
paste = "1.0.11"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = "0.11.14"

[target.'cfg(target_family = "wasm")'.dependencies]
worker = "0.0.13"

[target.'cfg(target_family = "wasm")'.patch.crates-io]
num-integer = { git = "https://github.com/rust-num/num-integer", rev = "683903c" }

[features]
default = ["builders"]
full = ["builders", "client"]
builders = []
client = ["base64"]

[dev-dependencies]
lazy_static = "1.4.0"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }