[package]
name = "github-rest"
version = "0.0.0"
edition = "2021"
authors = [
    "Proudmuslim <proudmuslim-dev@protonmail.com>",
    "Tricked <tricked@duck.com>",
]
license = "BSD-4-Clause"

# TODO: Organize feature-specific deps
[dependencies]
## HTTP
github-api-octocat = "0.1.0"

## Serialization/Deserialization
strum = { version = "0.24.1", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
base64 = { version = "0.21.2", optional = true }

# Misc
async-trait = "0.1.68"
paste = "1.0.12"
thiserror = "1.0.40"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = "0.11.18"

[target.'cfg(target_family = "wasm")'.dependencies]
worker = "0.0.17"

[features]
default = ["builders"]
full = ["builders", "client"]
builders = []
client = ["base64"]

[dev-dependencies]
lazy_static = "1.4.0"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }