[package]
name = "octocat-rs"
version = "0.0.0"
edition = "2021"
authors = [
    "Proudmuslim <proudmuslim-dev@protonmail.com>",
    "Tricked <tricked@duck.com>",
]
license = "BSD-4-Clause"
description = """
(WIP) A GitHub API client.
"""

[dependencies]
## GitHub
github-rest = { path = "../github-rest" }
github-api-octocat = "0.1.0"

## Async
tokio = { version = "1.25.0", features = ["full"], optional = true }
async-trait = "0.1.64"
futures = "0.3.26"

## Webserver
warp = { version = "0.3.3", optional = true }
worker = { version = "0.0.13", optional = true }

## Serialization/Deserialization
serde_urlencoded = { version = "0.7.1", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
toml = "0.7.2"

## Error Handling
thiserror = "1.0.38"
anyhow = "1.0.69"

## Webhook secrets
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.6", optional = true }
hex = { version = "0.4.3", optional = true }

## Util
strum_macros = "0.24.3"
strum = "0.24.1"
lazy_static = { version = "1.4.0", optional = true }
reqwest = { version = "0.11.14", optional = true }
base64 = { version = "0.21.0", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bytes = { version = "1.4.0", optional = true }

[target.'cfg(target_family = "wasm")'.patch.crates-io]
num-integer = { git = "https://github.com/rust-num/num-integer", rev = "683903c" }

[features]
default = ["native"]
native = ["warp", "tokio", "reqwest"]
workers = ["worker", "serde_urlencoded", "base64"]
secrets = ["hmac", "sha2", "lazy_static", "hex", "bytes"]
