[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## GitHub
octocat-rs = { path = "../../" }
github-rest = { git = "https://github.com/octocat-rs/github-rest", rev = "b6b09ef" }

## Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.52"

## Util
anyhow = "1.0.51"
reqwest = "0.11.7"
