[package]
name = "cloudflare"
version = "0.1.0"
authors = ["Tricked <tricked@duck.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
lazy_static = "1.4"
serde_json = "1"
octocat-rs = { path = "../../octocat-rs", default-features = false, features = ["workers"] }
worker = "0.0.9"
cfg-if = "1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
async-trait = "0.1.52"
wasm-bindgen-futures = "0.4.1"
anyhow = "1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
